data gen improvements